compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__use___arity_1.snap
---
source: compiler-core/src/fsharp/tests/use_.rs
expression: "\npub fn go() {\n  use <- pair()\n  123\n}\n\nfn pair(f) {\n  let x = f()\n  #(x, x)\n}\n"
---
module rec my.``mod``

let private pair<'a> (f: unit -> 'a) = begin
    let x = f()
    (x, x)
end
let go () = begin
    pair
        (fun() -> 123L)
end
