compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__use___arity_2.snap
---
source: compiler-core/src/fsharp/tests/use_.rs
expression: "\npub fn go() {\n  use <- pair(1.0)\n  123\n}\n\nfn pair(x, f) {\n  let y = f()\n  #(x, y)\n}\n"
---
module rec my.``mod``

let private pair (x: 'u9) (f: unit -> 'u12) = begin
    let y = f()
    (x, y)
end
let go () = begin
    pair
        (1.0)
        (fun() -> 123L)
end
