compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__use___no_callback_body.snap
---
source: compiler-core/src/fsharp/tests/use_.rs
expression: "\npub fn go() {\n  let thingy = fn(f) { f() }\n  use <- thingy()\n}\n"
---
module rec my.``mod``

let go<'a> () = begin
    let thingy =
        fun(f: unit -> 'a) -> f()
    thingy
        (fun() -> failwith "Not implemented")
end
